cc/scheduler/begin_frame_source.h
@@ -257,6 +257,10 @@ class CC_EXPORT ExternalBeginFrameSource : public BeginFrameSource {
   void OnBeginFrame(const BeginFrameArgs& args);
 
  protected:
+  // Called on AddObserver and gets missed BeginFrameArgs for the given
+  // observer.
+  virtual BeginFrameArgs GetMissedBeginFrameArgs(BeginFrameObserver* obs);
+
   BeginFrameArgs last_begin_frame_args_;
   std::unordered_set<BeginFrameObserver*> observers_;
   ExternalBeginFrameSourceClient* client_;
